# YigitBank

./: .env  .gitignore  Cargo.toml  README.md
src/: auth.rs  bank.rs  main.rs
src/auth/: login.rs
src/util/: api.rs  types.rs
types/: Cargo.toml
types/src/: lib.rs
utils/: Cargo.toml
utils/src/: database.rs  lib.rs
