[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.6.0",  features = ["tokio-sync"] }
serde =  { version = "1.0.164", features = ["derive"]}
serde_with = "3.0.0"
