[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.6.0" }
futures = "0.3.28"
serde =  { version = "1.0.164", features = ["derive"]}
dotenv = "0.15.0"
types = { path = "../types" }
